# ft_turing

./: .gitignore  .hlint.yaml  README.md  cabal.project  ft-turing.cabal  stack.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: Main.hs
src/: FTTuring.hs
test/: Spec.hs
